# stand-awhile

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  app.rc  build.rs
src/: about.rs  config.rs  draw.rs  i18n.rs  main.rs  theme.rs  toast.rs  tray_icon.rs  window_proc.rs
src/ui/: button.rs  check_box.rs  component.rs  countdown.rs  gdi_plus.rs  hyper_link_text.rs  mod.rs  theme.rs
